@@ -1,3 +1,6 @@
+March 8 2012 12:28
+    Changed P1 paddle controls to W/S, added P2 paddle controls (Up/Down)
+
 March 8 2012 12:12
     Added second paddle, made score increase on hitting the wall, not on paddle
 
